--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@types/opentype.js": "^1.3.8",
     "goober": "^2.1.14",
-    "opentype.js": "^1.3.4",
-    "preact": "^10.19.5"
+    "preact": "^10.19.5",
+    "woff2-encoder": "^2.0.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.8.1",
